# RSHELL

./: .gitignore  Cargo.toml  LICENSE  Makefile  PROJECT_LAYOUT.MD  README.md  fontlol.txt
registry/: registry.json
src/: glob.rs  gui_main.rs  main.rs  shell.rs
src/completion/: mod.rs
src/executor/: builtin.rs  expand.rs  mod.rs  pipeline.rs
src/executor/builtin/: core.rs  find.rs  fs.rs  grep.rs  jobs.rs  mini.rs  mod.rs  pkg.rs  test.rs  text.rs  util.rs
src/executor/builtin/pkg/: install.rs  meta.rs  mod.rs  paths.rs  progress.rs  registry.rs
src/parser/: ast.rs  block.rs  mod.rs  tokenizer.rs
src/readline/: mod.rs
src/shell/: history.rs  mod.rs  persist.rs  prompt.rs
