[package]
name = "new_R_Shell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "new_R_Shell"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
reedline = "0.30"
crossterm = "0.27"
colored = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
glob = "0.3"
nu-ansi-term = "0.50"

[profile.release]
opt-level = 3
strip = true

# Windows: show a console window (change to "windows" to hide it for pure GUI)
[package.metadata]
# To build for Windows from Linux:
# cargo install cargo-xwin
# cargo xwin build --release --target x86_64-pc-windows-msvc