[package]
name = "new_R_Shell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "new_R_Shell"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
reedline = "0.30"
crossterm = "0.27"
colored = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
glob = "0.3"
nu-ansi-term = "0.50"
libc = "0.2"
filetime = "0.2"

[profile.release]
opt-level = 3
strip = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_Security",
    "Win32_Foundation",
]}

ureq = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"